--- a/scss/base/_funcionalidades.scss
+++ b/scss/base/_funcionalidades.scss
@@ -1,1 +1,10 @@
 //variables bucle funciones condicionales
+$dark-bg-color: #343a40; 
+$dark-text-color: #ffffff; 
+$font-family: "Oswald", sans-serif;
+$color-black: #000;
+$color-white: #fff;
+$color-grey: #808080;
+$color-yellow: yellow;
+$breakpoint-mobile: 480px;
+$breakpoint-tablet: 768px;
