--- a/scss/componentes/_header.scss
+++ b/scss/componentes/_header.scss
@@ -1,55 +1,90 @@
 //lo de bootstrap (clases) se tiran sueltas en generales
-header {
+
+.navbar {
+  &.navbar-dark {
+    background-color: $dark-bg-color;
+  }
+
+  &.fixed-top {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+
+  .container-fluid {
     display: flex;
-    justify-content: space-between;
-    padding: 5px;
-    background-color: black;
-    position: sticky;
-    top: 0px;
-    z-index: 1000;
     align-items: center;
 
-    nav {
-      img {
-        width: 90px;
-        height: 70px;
-      }
+    img {
+      max-height: 50px; 
+    }
 
-      div {
-        ul {
-          display: flex;
+    .navbar-toggler {
+      border: none;
+
+      .navbar-toggler-icon {
+        background-color: $dark-text-color;
+      }
+    }
+  }
+}
+
+.offcanvas {
+  &.offcanvas-end {
+    background-color: $dark-bg-color;
+    color: $dark-text-color;
+
+    .offcanvas-body {
+      .navbar-nav {
+        justify-content: flex-end;
+
+        .nav-item {
+          .nav-link {
+            color: $dark-text-color;
+            text-decoration: none;
+
+            &:hover {
+              color: lighten($dark-text-color, 20%);
+            }
+          }
         }
       }
     }
-
-    .item-box {
-      padding: 15px 5px;
-      text-align: center;
-      color: white;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-      margin-right: 5px;
-    }
   }
+}
 
-  .highlight {
-    align-items: center;
-    text-align: center;
-    font-size: 90px;
-    color: yellow;
-    padding: 10px;
-  }
+body header nav img {
+  width: 90px;
+  height: 70px;
+}
+header {
 
-  p {
-    text-align: center;
-    font-size: 30px;
-    color: black;
-    padding: 35px;
-  }
+  display: flex;
+  justify-content: space-between;
+  padding: 5px;
+  background-color: black;
+  position: sticky;
+  top: 0px;
+  z-index: 1000;
+  align-items: center;
+  font-family: "Oswald", sans-serif;
+}
 
-  .contenido-paginas {
-    p {
-      margin-top: 25px;
-    }
-  }
+header nav div ul {
+
+  display: flex;
+
+}
+
+.item-box {
+
+  padding: 15px 5px;
+  text-align: center;
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-right: 5px;
+  font-family: "Oswald", sans-serif;
+
+}
