--- a/scss/base/_generales.scss
+++ b/scss/base/_generales.scss
@@ -1,3 +1,22 @@
 // reset, clases sueltas, tipografia, cosas que aplican a selectores en general
 
-.button{}
+* {
+    list-style: none;
+    margin: 1px;
+    padding: 0px;
+    text-decoration: none;
+    box-sizing: border-box;
+    font-family: "Oswald", sans-serif;
+}
+
+// Body styles
+
+body {
+    background-image: url(../img/helsinki.jpg);
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+}
