--- a/scss/componentes/_footer.scss
+++ b/scss/componentes/_footer.scss
@@ -27,7 +27,7 @@
   
   
     .footer-down {
-      flex-direction: column;
+      flex-direction: row;
       gap: 20px;
       align-items: center;
     }
