--- a/scss/base/_funcionalidades.scss
+++ b/scss/base/_funcionalidades.scss
@@ -1,1 +1,7 @@
 // variables, condicionales, mixins, funciones, listas
+
+$color-black:black;
+$color-grey:grey;
+$color-white:white;
+$color-promo:yellow;
+
